--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -5,6 +5,10 @@ on:
     branches:
       - master
 
+env:
+  GITHUB_TOKEN: ${{ github.token }}
+  MIX_ENV: test
+
 concurrency:
   group: ${{ github.workflow }}-${{ github.ref }}
   cancel-in-progress: true
@@ -34,9 +38,23 @@ jobs:
     steps:
     - uses: actions/checkout@v3
 
-    - name: run tests
+    - name: Set up Elixir
+      uses: erlef/setup-elixir@885971a72ed1f9240973bd92ab57af8c1aa68f24
+      with:
+        elixir-version: '1.14.2' # Define the elixir version [required]
+        otp-version: '24' # Define the OTP version [required]
+        
+    - name: Restore dependencies cache
+      uses: actions/cache@v2
+      with:
+        path: deps
+        key: ${{ runner.os }}-mix-${{ hashFiles('**/mix.lock') }}
+        restore-keys: ${{ runner.os }}-mix-
+
+    - name: Install dependencies
+      run: mix deps.get
+
+    - name: Run tests
       run: mix test
-      env:
-        GITHUB_TOKEN: ${{ github.token }}
-        MIX_ENV: test
+
 
