--- a/.github/workflows/ci.yml
+++ b/.github/workflows/ci.yml
@@ -39,7 +39,7 @@ jobs:
     - uses: actions/checkout@v3
 
     - name: add libtinfo5
-      run: sudo apt-get install libtinfo5
+      run: apt-get install libtinfo5
 
     - name: Set up Elixir
       uses: erlef/setup-elixir@885971a72ed1f9240973bd92ab57af8c1aa68f24
